# Rust

Advent of Code/AoC-2015/: AOC 2015 prueba de propiedad ownerp.txt  Cargo.toml
Advent of Code/AoC-2015/day_1/: Cargo.toml
Advent of Code/AoC-2015/day_2/: Cargo.toml
Advent of Code/AoC-2015/day_3/: Cargo.toml
Advent of Code/AoC-2015/day_4/: Cargo.toml
Advent of Code/AoC-2015/day_5/: Cargo.toml
Advent of Code/AoC-2015/day_6/: Cargo.toml
Advent of Code/AoC-2015/src/: day_1.rs  main.rs
Advent of Code/aof_2015/: Cargo.toml
Learning/car-factory/src/: main.rs
Learning/error-handling/src/: main1.rs
Learning/hallo_cargo/: Cargo.toml
Learning/modules-packages-crates/: Cargo.toml
Learning/rectangles/src/: main.rs
Learning/rust-generic-types-traits/src/: main.rs
Projects/caesar_cipher/: Cargo.toml
Projects/caesar_cipher/src/: main.rs
Projects/challenges/: Cargo.toml  challenges.md  words_alpha.txt
Projects/challenges/src/: challenge_1.rs  challenge_2.rs  challenge_3.rs  challenge_4.rs  challenge_5.rs  challenge_6.rs  challenge_7.rs  challenge_8.rs  main.rs
Projects/combiner/src/: main.rs
Projects/double_elimination_tournament/: Cargo.toml  read.md
Projects/hangman_game/: Cargo.toml  words.txt
Projects/icedrs-project-example/: Cargo.toml
Projects/letter_sum/: Cargo.toml
Projects/rusty-journal/: test-journal.json
Rust/Projects/rusty-journal/: Cargo.toml
Rust/Projects/rusty-journal/src/: main.rs  tasks.rs
Rust/ejemplo/: Cargo.toml
Rust/rust-generic-types-traits/: Cargo.toml
Rust/rusty-journal/: Cargo.toml  test-journal.json
(+58 files in other folders)
