[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0" # <--- Add `anyhow` to our project dependencies.
home = "0.5" # <--- Add `home` to our project dependencies.
# Add serde_json.
serde_json = "1.0"
structopt = "0.3"

[dependencies.chrono]
# We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
features = ["serde"]
version = "0.4"

# Add serde in its own section.
[dependencies.serde]
# We'll need the derive feature.
features = ["derive"]
version = "1.0"